--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -30,6 +34,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -40,4 +49,47 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    //retrofit library
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //Gson Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //Rx java Adapter
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01"
+    //RX
+    api 'io.reactivex.rxjava2:rxjava:2.2.21'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+    // Scalable size Unit
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    //card view
+    implementation "androidx.cardview:cardview:1.0.0"
+    //recyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    //circleImage
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+    //Circle Indicator
+    implementation 'me.relex:circleindicator:2.1.6'
+
+    //swipe refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //circularImage
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //SpinKit
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
 }
